crates/macros/tests/pass/tuple_struct.rs
use macros::FixedLayout;

#[derive(FixedLayout)]
#[repr(C)]
struct Foo(u8);

fn main() {
    mem_markers::ensure_fixed_layout::<Foo>();
}
